ZoekConfiguratie kan nu worden opgevraagd.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,12 @@ javac.classpath=\
     ${reference.securityfilter-b3p.jar}:\
     ${libs.Struts.classpath}:\
     ${libs.DWR.classpath}:\
-    ${reference.b3p-zoeker.jar}
+    ${reference.b3p-zoeker.jar}:\
+    ${libs.GeotoolsOgc2.5.5.classpath}:\
+    ${libs.GeotoolsCommon2.5.5.classpath}:\
+    ${libs.GeotoolsOracle2.5.5.classpath}:\
+    ${libs.GeotoolsJdbc2.5.5.classpath}:\
+    ${libs.GeotoolsPostgis2.5.5.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
