--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,11 +38,11 @@ javac.classpath=\
     ${libs.Struts.classpath}:\
     ${libs.DWR.classpath}:\
     ${reference.b3p-zoeker.jar}:\
-    ${libs.GeotoolsOgc2.5.5.classpath}:\
-    ${libs.GeotoolsCommon2.5.5.classpath}:\
-    ${libs.GeotoolsOracle2.5.5.classpath}:\
-    ${libs.GeotoolsJdbc2.5.5.classpath}:\
-    ${libs.GeotoolsPostgis2.5.5.classpath}
+    ${libs.GeotoolsOracle.classpath}:\
+    ${libs.GeotoolsOgc.classpath}:\
+    ${libs.GeotoolsJdbc.classpath}:\
+    ${libs.GeotoolsCommon.classpath}:\
+    ${libs.GeotoolsPostgis.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
