- Hibernate 3.6.3 branch. Na testperiode gaat dit naar de Hibernate trunk. Dan weer libs omzetten.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 application.title=b3p-gisviewerConfig
 application.vendor=Roy
 build.classes.dir=${build.dir}/classes
@@ -25,11 +28,10 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.b3p-gisviewer.jar}:\
     ${libs.Security.classpath}:\
     ${libs.Commons.classpath}:\
-    ${libs.Hibernate.classpath}:\
     ${libs.Xalan.classpath}:\
+    ${libs.Hibernate3.6.3.Final.classpath}:\
     ${libs.Servlet-2.4.classpath}:\
     ${reference.b3p-commons-core.jar}:\
     ${reference.b3p-commons-hibernate.jar}:\
@@ -37,15 +39,18 @@ javac.classpath=\
     ${reference.securityfilter-b3p.jar}:\
     ${libs.Struts.classpath}:\
     ${libs.DWR.classpath}:\
-    ${reference.b3p-zoeker.jar}:\
     ${libs.GeotoolsOracle.classpath}:\
     ${libs.GeotoolsOgc.classpath}:\
     ${libs.GeotoolsJdbc.classpath}:\
     ${libs.GeotoolsCommon.classpath}:\
-    ${libs.GeotoolsPostgis.classpath}
+    ${libs.GeotoolsPostgis.classpath}:\
+    ${reference.b3p-gisviewer.jar}:\
+    ${reference.b3p-zoeker.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
