--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,8 @@ javac.classpath=\
     ${libs.Security.classpath}:\
     ${libs.Commons.classpath}:\
     ${libs.Xalan.classpath}:\
-    ${libs.Hibernate3.6.3.Final.classpath}:\
     ${libs.Servlet-2.4.classpath}:\
+    ${libs.Hibernate.classpath}:\
     ${reference.b3p-commons-core.jar}:\
     ${reference.b3p-commons-hibernate.jar}:\
     ${reference.b3p-commons-gis.jar}:\
