--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,6 @@ javac.classpath=\
     ${libs.Servlet-2.4.classpath}:\
     ${libs.Hibernate.classpath}:\
     ${reference.b3p-commons-core.jar}:\
-    ${reference.b3p-commons-hibernate.jar}:\
     ${reference.b3p-commons-gis.jar}:\
     ${reference.securityfilter-b3p.jar}:\
     ${libs.Struts.classpath}:\
@@ -72,16 +71,15 @@ javadoc.windowtitle=
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.b3p-commons-core=../b3p-commons-core
 project.b3p-commons-gis=../b3p-commons-gis
-project.b3p-commons-hibernate=../b3p-commons-hibernate
 project.b3p-gisviewer=../b3p-gisviewer
 project.b3p-zoeker=../b3p-zoeker
 project.securityfilter-b3p=../securityfilter-b3p
 reference.b3p-commons-core.jar=${project.b3p-commons-core}/dist/b3p-commons-core.jar
 reference.b3p-commons-gis.jar=${project.b3p-commons-gis}/dist/b3p-commons-gis.jar
-reference.b3p-commons-hibernate.jar=${project.b3p-commons-hibernate}/dist/b3p-commons-hibernate.jar
 reference.b3p-gisviewer.jar=${project.b3p-gisviewer}/dist/b3p-gisviewer.jar
 reference.b3p-zoeker.jar=${project.b3p-zoeker}/dist/b3p-zoeker.jar
 reference.securityfilter-b3p.jar=${project.securityfilter-b3p}/dist/securityfilter-b3p.jar
