--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=b3p-gisviewerConfig
 application.vendor=Roy
@@ -26,7 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.Security.classpath}:\
     ${libs.Commons.classpath}:\
@@ -38,12 +41,8 @@ javac.classpath=\
     ${reference.securityfilter-b3p.jar}:\
     ${libs.Struts.classpath}:\
     ${libs.DWR.classpath}:\
-    ${libs.GeotoolsOracle.classpath}:\
-    ${libs.GeotoolsOgc.classpath}:\
-    ${libs.GeotoolsJdbc.classpath}:\
-    ${libs.GeotoolsCommon.classpath}:\
-    ${libs.GeotoolsPostgis.classpath}:\
     ${reference.b3p-gisviewer.jar}:\
+    ${libs.GeotoolsFull.classpath}:\
     ${reference.b3p-zoeker.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -68,6 +67,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
