--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,8 +42,8 @@ javac.classpath=\
     ${libs.Struts.classpath}:\
     ${libs.DWR.classpath}:\
     ${reference.b3p-gisviewer.jar}:\
-    ${libs.GeotoolsFull.classpath}:\
-    ${reference.b3p-zoeker.jar}
+    ${reference.b3p-zoeker.jar}:\
+    ${libs.Geotools10.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
