--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.b3p</groupId>
     <artifactId>b3p-gisviewerConfig</artifactId>
-    <version>4.2-SNAPSHOT</version>
+    <version>4.2.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <properties>
+        <project.build.sourceEncoding>windows-1252</project.build.sourceEncoding>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>commons-logging</groupId>
@@ -12,14 +17,14 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
-            <groupId>nl.b3p</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>b3p-commons-core</artifactId>
-            <version>4.2-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>nl.b3p</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>b3p-gisviewer</artifactId>
-            <version>4.2-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -33,14 +38,4 @@
             <version>3.6.3.Final</version>
         </dependency>
     </dependencies>
-    <properties>
-        <project.build.sourceEncoding>windows-1252</project.build.sourceEncoding>
-    </properties>    
-    <repositories>
-        <repository>
-            <id>osgeo</id>
-            <name>Open Source Geospatial Foundation Repository</name>
-            <url>http://download.osgeo.org/webdav/geotools/</url>
-        </repository>
-    </repositories>
 </project>
