--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>hibernate-core</artifactId>
             <version>3.6.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>3.6.3.Final</version>
+        </dependency>
     </dependencies>
 </project>
