--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>b3p-commons-core</artifactId>
-            <version>${project.version}</version>
+            <version>4.2.1</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>b3p-gisviewer</artifactId>
-            <version>${project.version}</version>
+            <version>4.2.1</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -43,4 +43,36 @@
             <version>3.6.3.Final</version>
         </dependency>
     </dependencies>
+   <repositories>
+       <repository>
+            <id>repo.b3p.nl</id>
+            <name>B3P file Repository</name>
+            <url>http://repo.b3p.nl/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+    <scm>
+        <connection>scm:git:git@github.com:B3Partners/b3p-gisviewerConfig.git</connection>
+        <developerConnection>scm:git:git@github.com:B3Partners/b3p-gisviewerConfig.git</developerConnection>
+        <url>https://github.com/B3Partners/b3p-gisviewerConfig</url>
+      <tag>b3p-gisviewerConfig-4.2.1</tag>
+    </scm>
+    <distributionManagement>
+        <repository>
+            <id>repo.b3p.nl</id>
+            <name>B3P file Repository</name>
+            <url>http://repo.b3p.nl/nexus/content/repositories/releases/</url>
+        </repository>
+    </distributionManagement>
+    <build>        
+        <plugins>            
+            <plugin>                
+                <groupId>org.apache.maven.plugins</groupId>                
+                <artifactId>maven-release-plugin</artifactId>                
+                <version>2.5.2</version>                
+                <configuration>                    
+                    <pushChanges>true</pushChanges>                
+                </configuration>            
+            </plugin>
+        </plugins>
+    </build>
 </project>
