--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>b3p-gisviewer</artifactId>
-            <version>4.2.2-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -54,7 +54,7 @@
         <connection>scm:git:git@github.com:B3Partners/b3p-gisviewerConfig.git</connection>
         <developerConnection>scm:git:git@github.com:B3Partners/b3p-gisviewerConfig.git</developerConnection>
         <url>https://github.com/B3Partners/b3p-gisviewerConfig</url>
-      <tag>b3p-gisviewerConfig-4.2.1</tag>
+      <tag>b3p-gisviewerConfig-${project.version}</tag>
     </scm>
     <distributionManagement>
         <repository>
